<resources>
    <string name="app_name">BloodBank</string>
    <string name="home">Home</string>

    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Create an account</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="displayName">Full Name\n</string>
    <string name="mobile">Phone Number</string>
    <string name="userAddress">Address</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="signup">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="bloodinfo">Blood Info</string>
    <string name="info_">Giving blood saves lives. The blood you give is a lifeline in an emergency and for people who need long–term treatments. Many people would not be alive today if donors had not generously given their blood. \n\nWhy we need you to give blood?\n\n We need over 6000 blood donations every day to treat patients in need for people to give blood.\n\nEach year we need approximately 200000 new donors, as some donors can no longer give blood.Most people between ages of 17–65 are able to give blood. Around half our current donors are over 45.That is why we need more young people to start giving blood.</string>
    <string name="eligibility_">Eligibility Requirements</string>
    <string name="male_">If you are male, you must:\nBe healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 1 inch \nWeigh at least 130 lbs.\n</string>
    <string name="female_">If you are female, you must:\n Be healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 5 inch\nWeigh at least 150 lbs.</string>
    <string name="profile">Profile</string>
    <string name="achiev">Achievements</string>
    <string name="fndBlood">Find Blood Donor</string>
    <string name="lgout">Log out</string>
    <string name="BloodGroup">Blood Group</string>
    <string name="Division">Choose Division</string>
    <string name="Post">Post</string>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <array name="division_list">
        <item>Ba Dinh</item>
        <item>Hoan Kiem</item>
        <item>Dong Da</item>
        <item>Hai Ba Trung</item>
        <item>Cau Giay</item>
        <item>Thanh Xuan</item>
        <item>Hoang Mai</item>
        <item>Long Bien</item>
        <item>Nam Tu Liem</item>
        <item>Bac Tu Liem</item>
        <item>Tay Ho</item>
        <item>Ha Dong</item>
        <item>Soc Son</item>
        <item>Dong Anh</item>
        <item>Gia Lam</item>
        <item>Thanh Tri</item>
        <item>Me Linh</item>
        <item>Thuong Tin</item>
        <item>Phu Xuyen</item>
        <item>Ung Hoa</item>
        <item>My Duc</item>
        <item>Chuong My</item>
        <item>Thanh Oai</item>
        <item>Dan Phuong</item>
        <item>Hoai Duc</item>
        <item>Quoc Oai</item>
        <item>Ba Vi</item>
        <item>Thach That</item>
        <item>Son Tay</item>
    </array>


</resources>
